Modelo relacional entre tabela film e tabela genero adicionado, trabalhando com banco h2 para testes, flyway adicionado ao projeto, 2 migrations adcionadas

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ build/
 ### VS Code ###
 .vscode/
 
+### Arquivos Docker ###
 Dockerfile
 docker-compose.yml
-application.propertiessdas
+src/main/resources/application.properties
