--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,14 @@
 			<version>9.22.2</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.github.dozermapper/dozer-core -->
+		<dependency>
+			<groupId>com.github.dozermapper</groupId>
+			<artifactId>dozer-core</artifactId>
+			<version>6.1.0</version>
+		</dependency>
+
+
 
 
 
