DozerMapper Removed, in its place, it was created 'MapperEntitiesPort' and 'MapperEntities' were created to map entities

--- a/pom.xml
+++ b/pom.xml
@@ -81,10 +81,11 @@
 			<version>6.1.0</version>
 		</dependency>
 
-
-
-
-
+		<dependency>
+			<groupId>jakarta.xml.bind</groupId>
+			<artifactId>jakarta.xml.bind-api</artifactId>
+			<version>4.0.0</version>
+		</dependency>
 
 
 	</dependencies>
