--- a/pom.xml
+++ b/pom.xml
@@ -74,19 +74,16 @@
 			<version>9.22.2</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/com.github.dozermapper/dozer-core -->
-		<dependency>
-			<groupId>com.github.dozermapper</groupId>
-			<artifactId>dozer-core</artifactId>
-			<version>6.1.0</version>
-		</dependency>
-
 		<dependency>
 			<groupId>jakarta.xml.bind</groupId>
 			<artifactId>jakarta.xml.bind-api</artifactId>
 			<version>4.0.0</version>
 		</dependency>
 
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-security</artifactId>
+			</dependency>
 
 	</dependencies>
 
