--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,14 @@
 				<artifactId>spring-boot-starter-security</artifactId>
 			</dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.auth0/java-jwt -->
+		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>4.4.0</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
