--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,23 @@
 			<version>4.4.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>rest-assured</artifactId>
+			<version>5.3.2</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>spring-mock-mvc</artifactId>
+			<version>5.3.2</version>
+			<scope>test</scope>
+		</dependency>
+
+
+
+
 
 	</dependencies>
 
