--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,12 @@
 		</dependency>
 
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-log4j2</artifactId>
+		</dependency>
+
+
 
 
 	</dependencies>
