--- a/pom.xml
+++ b/pom.xml
@@ -60,13 +60,6 @@
 			<version>42.6.0</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
-		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<version>2.2.224</version>
-			<scope>runtime</scope>
-		</dependency>
 
 		<dependency>
 			<groupId>org.flywaydb</groupId>
@@ -119,8 +112,6 @@
 		</dependency>
 
 
-
-
 	</dependencies>
 
 	<build>
@@ -132,9 +123,8 @@
 					<mainClass>me.dri.Catvie.CatvieApplication</mainClass>
 				</configuration>
 			</plugin>
-
 		</plugins>
-
+		<finalName>spring-boot-docker</finalName>
 	</build>
 
 </project>
