--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,3 @@
-logging.level.org.springframework.security.oauth2=DEBUG
-
 spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=true
 spring.flyway.locations=classpath:db/migration
@@ -8,8 +6,9 @@ spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
 spring.jpa.show-sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/catvie
+#spring.datasource.url=jdbc:postgresql://localhost:5432/catvie
 spring.datasource.username=postgres
-spring.datasource.password=%{DB_PASSWORD}
+spring.datasource.password=postgrespas
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 server.port=8080
