--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
+
+cloud.aws.region.static=us-east-1
+cloud.aws.region.auto=false
+cloud.aws.stack.auto=false
+cloud.aws.credentials.access-key=${AWSACCESKEY}
+cloud.aws.credentials.secret-key=${AWSACCESKEYSECRET}
+
 spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=true
 spring.flyway.locations=classpath:db/migration
@@ -8,7 +15,7 @@ spring.jpa.show-sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/catvie
 #spring.datasource.url=jdbc:postgresql://localhost:5432/catvie
 spring.datasource.username=postgres
-spring.datasource.password=postgrespas
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-server.port=8080    
+server.port=8080
