--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 cloud.aws.region.static=us-east-1
 cloud.aws.region.auto=false
 cloud.aws.stack.auto=false
-cloud.aws.credentials.access-key=${AWSACCESKEY}
-cloud.aws.credentials.secret-key=${AWSACCESKEYSECRET}
+#cloud.aws.credentials.access-key=
+#cloud.aws.credentials.secret-key=
 
 spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=true
@@ -14,8 +14,8 @@ spring.datasource.platform=postgres
 spring.jpa.show-sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/catvie
 #spring.datasource.url=jdbc:postgresql://localhost:5432/catvie
-spring.datasource.username=postgres
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.username=dridev
+spring.datasource.password=130722
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 server.port=8080
