--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,13 +9,27 @@ spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=true
 spring.flyway.locations=classpath:db/migration
 
-spring.jpa.database=POSTGRESQL
-spring.datasource.platform=postgres
-spring.jpa.show-sql=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/catvie
+# CONFIG POSTGRES DB
+
+#spring.jpa.database=POSTGRESQL
+#spring.datasource.platform=postgres
+#spring.jpa.show-sql=true
 #spring.datasource.url=jdbc:postgresql://localhost:5432/catvie
-spring.datasource.username=dridev
-spring.datasource.password=130722
+#spring.datasource.username=dridev
+#spring.datasource.password=130722
+#spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#server.port=8080
+
+# H2 DATABASE
+
+# Configuração do Spring Boot para o banco de dados H2
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-server.port=8080
+spring.jpa.show-sql=true
+
